Remade Add Schedule
- Moved to a Page instead of modal
- Added Crew Selection
- Made it Form Steps
- Added Calendar to the Side
- Added Validation for Atomicity